[Icons] Accept <twig:ux:icon /> (lowercase)

--- a/tests/Fixtures/templates/template1.html.twig
+++ b/tests/Fixtures/templates/template1.html.twig
@@ -3,7 +3,7 @@
     <li id="second">{{ ux_icon('user') }}</li>
     <li id="third">{{ ux_icon('sub:check', {'data-action': 'string "with" quotes'}) }}</li>
     <li id="fifth"><twig:UX:Icon name="user" class="h-8 w-8" /></li>
-    <li id="sixth"><twig:UX:Icon name="sub:check" /></li>
-    <li id="seventh"><twig:UX:Icon :name="'sub:'~'check'" /></li>
+    <li id="sixth"><twig:ux:icon name="sub:check" /></li>
+    <li id="seventh"><twig:Ux:Icon :name="'sub:'~'check'" /></li>
     <li id="eighth">{{ ux_icon('iconamoon:3d-duotone') }}</li>
 </ul>
